samples/_failures_safe/1761095270_e32921_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f8ef3888.c: In function ‘main’:
./samples/SAFE/__tmp_f8ef3888.c:151:15: error: expected ‘;’ at end of input
  151 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_f8ef3888.c:151:9: error: expected declaration or statement at end of input
  151 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_f8ef3888.c:151:9: error: expected declaration or statement at end of input
